fixes misaligned/malformatted previews

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -934,6 +934,13 @@ span.techreport				{background-position:0 -1003px;		width:55px;	height:52px;				
 span.unpublished			{background-position:0 -1056px;		width:36px;	height:49px; margin-left: 9px; 	margin-top: 13px;}
 span.web					{background-position:-2px -1106px;	width:61px;	height:37px; margin-left: 0px;	margin-top: 22px;}
 
+span.preview_pic {
+	margin: 0!important;
+	width: 100%;
+	height: 100%;
+	background-size:auto 90%;
+	background-position:center;
+}
 
 .hiddenSystemTag .post-content a {
 	font-size: 10px !important;
